# marlin

./: CMakeLists.txt  INSTALL
data/: CMakeLists.txt  marlin-autostart.desktop
debian/: control
libcore/: CMakeLists.txt  eel-accessibility.c  eel-accessibility.h  eel-debug.c  eel-debug.h  eel-fcts.c  eel-fcts.h  eel-gdk-extensions.c  eel-gdk-extensions.h  eel-gdk-pixbuf-extensions.c  eel-gdk-pixbuf-extensions.h  eel-glib-extensions.c  eel-glib-extensions.h  eel-gtk-extensions.c  eel-gtk-extensions.h  eel-i18n.c  eel-i18n.h  eel-pango-extensions.c  eel-pango-extensions.h  eel-stock-dialogs.c  eel-stock-dialogs.h  eel-string.c  eel-string.h  eel-ui.c  eel-ui.h  eel-vfs-extensions.c  eel-vfs-extensions.h  fm-list-model.c  fm-list-model.h  gof-directory-async.vala  gof-file.c  marlin-file-changes-queue.c  marlin-file-changes-queue.h  marlin-file-conflict-dialog.c  marlin-file-conflict-dialog.h  marlin-file-operations.c  marlin-file-operations.h  marlin-file-utilities.c  marlin-file-utilities.h  marlin-progress-info-manager.c  (+8 more)
libwidgets/: BreadcrumbsElements.vala  BreadcrumbsEntry.vala  CMakeLists.txt  LocationBar.vala
libwidgets/tests/: CMakeLists.txt  tests-pathbar.vala
marlin-daemon/: CMakeLists.txt
plugins/extended-actions/: CMakeLists.txt
plugins/marlin-ctags/: CMakeLists.txt
plugins/marlin-trash/: CMakeLists.txt
po/: ar.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fo.po  fr.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  marlin.pot  mr.po  ms.po  nb.po  ne.po  nl.po  nn.po  oc.po  pl.po  pt.po  (+15 more)
schemas/: org.gnome.marlin.gschema.xml
src/: CMakeLists.txt  exo-icon-view.c  exo-icon-view.h  exo-tree-view.c  exo-tree-view.h  fm-abstract-icon-view.c  fm-columns-view.c  fm-directory-view.c  fm-directory-view.h  fm-list-view.c  fm-list-view.h  gossip-cell-renderer-expander.c  gossip-cell-renderer-expander.h  marlin-application.c  marlin-application.h  marlin-bookmark-list.c  marlin-bookmark-list.h  marlin-bookmark.c  marlin-bookmark.h  marlin-connect-server-dialog.c  marlin-connect-server-dialog.h  marlin-connect-server-operation.c  marlin-connect-server-operation.h  marlin-deep-count.vala  marlin-dnd.c  marlin-dnd.h  marlin-icon-renderer.c  marlin-icon-renderer.h  marlin-mime-actions.c  marlin-mime-actions.h  marlin-places-sidebar.c  marlin-progress-info-widget.c  marlin-progress-info-widget.h  marlin-progress-ui-handler.c  marlin-progress-ui-handler.h  marlin-toolbar-editor.c  marlin-toolbar-editor.h  marlin-view-window.h  unity-quicklist-handler.c  unity-quicklist-handler.h
src/View/: Browser.vala  ContextView.vala  DirectoryNotFound.vala  DiskRenderer.vala  LocationBar.vala  OverlayBar.vala  PropertiesWindow.vala  Resources.vala  ViewContainer.vala  Window.vala
src/View/Chrome/: TopMenu.vala  ViewSwicher.vala
